table overflow initial fix, dev tool optins added

--- a/src/style.css
+++ b/src/style.css
@@ -637,8 +637,14 @@ table{
 }
 .tbl-content{
   height:325px;
+  scroll-behavior: smooth;
   overflow-x:auto;
-  /* overflow-y: scroll; */
+}
+.tableOverflow, 
+.tableOverflow tbody, 
+.tableOverflow tr, 
+.tableOverflow td{
+  user-select: none;
 }
 tr{
   line-height: 5px;
@@ -660,7 +666,7 @@ td{
   font-size: 12px;
   color: #fff;
   border-bottom: solid 1px rgba(255,255,255,0.1);
-  -webkit-app-region: none;
+  /* -webkit-app-region: none; */
 }
 tr th:nth-child(2),
 tr th:nth-child(3),
@@ -672,15 +678,11 @@ tr td:nth-child(3) {
 .sortStyle { cursor: pointer; }
 
 .ascStyle {
-  background-image: url(img/asc.gif);
-  background-repeat: no-repeat;
-  background-position: center right;
+  color: #7fd4a7;
 }
 
 .descStyle {
-  background-image: url(img/desc.gif);
-  background-repeat: no-repeat;
-  background-position: center right;
+  color: #ca6e6e;
 }
 
 .unsortStyle {
@@ -720,6 +722,7 @@ tr td:nth-child(3) {
   color:rgb(71, 71, 71);
   font-family: 'Courier New';
   pointer-events: none;
+  user-select: none;
 }
 
 .dragIN{
